deploy/routes/cinehome-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cinehome
  namespace: npd-movie
  labels:
    app.kubernetes.io/name: cinehome
    app.kubernetes.io/component: movie-web
spec:
  # Nội bộ OCP. Public: Cloudflare Tunnel → movie-web.npd-movie.svc:8080
  host: cinehome.apps.ocp01.npd.co
  path: /
  to:
    kind: Service
    name: movie-web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
